# 5cSort

./: CMakeLists.txt  README.md  main.c
getTimeOfSort/: getTimeOfSort.c  getTimeOfSort.h
getTimeOfSort/ArraySorting/: ShellSort.c  ShellSort.h  bubbleSort.c  bubbleSort.h  combSort.c  combSort.h  digitSort.c  digitSort.h  insertionSort.c  insertionSort.h  selectionSort.c  selectionSort.h
getTimeOfSort/arrayFunctions/: arrayFunctions.c  arrayFunctions.h
getTimeOfSort/generatingFuncs/: generatingFuncs.c  generatingFuncs.h
